span remove on mobile screen and copy function bugfix v9

--- a/style_encriptador.css
+++ b/style_encriptador.css
@@ -459,6 +459,10 @@ footer {
 
 @media only screen and (max-width: 480px) {
 
+    #frame-1 span{
+        display: none;
+    }
+
     #frame-3{
         flex-direction: column;
         gap: 20px;
